--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, viewport-fit=cover, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@_darae_" />
-    <meta name="twitter:creator" content="@_darae_" />
-    <meta name="twitter:title" content="Chamdarae@엘리시움">
-    <meta name="twitter:description" content="엘리시움에 사는 메린이 보우마스터 Chamdarae 입니다. 내 메애기 보고가.">
-    <meta name="twitter:image" content="https://maple.apteryx.moe/img/Chamdarae.png">
-    <meta property="og:url" content="https://apteryx.moe/maple/" />
-    <meta property="og:title" content="Chamdarae@엘리시움" />
-    <meta property="og:description" content="엘리시움에 사는 메린이 보우마스터 Chamdarae 입니다." />
-    <meta property="og:image" content="https://maple.apteryx.moe/img/Chamdarae.png" />
-    <title>Chamdarae@엘리시움</title>
-    <meta name="description" content="엘리시움에 사는 메린이 보우마스터 Chamdarae 입니다.">
+    <meta name="twitter:site" content="@maple_maung" />
+    <meta name="twitter:creator" content="@maple_maung" />
+    <meta name="twitter:title" content="멍은사@엘리시움">
+    <meta name="twitter:description" content="엘리시움 듀얼블레이더 멍은사">
+    <meta name="twitter:image" content="https://maungeunsa.github.io/img/Maungeunsa.jpeg">
+    <meta property="og:url" content="https://maungeunsa.github.io" />
+    <meta property="og:title" content="멍은사@엘리시움" />
+    <meta property="og:description" content="엘리시움 듀얼블레이더 멍은사" />
+    <meta property="og:image" content="https://maungeunsa.github.io/img/Maungeunsa.jpeg" />
+    <title>멍은사@엘리시움</title>
+    <meta name="description" content="엘리시움 듀얼블레이더 멍은사">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./weather/fog/fog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
-    <link rel="apple-touch-icon-precomposed" href="./img/Chamdarae.png" />
-    <link rel="shortcut icon" href="./img/Chamdarae_ingame.png">
-    <script type="text/javascript" src="./data.js"></script>
+    <link rel="apple-touch-icon-precomposed" href="./img/Maungeunsa.jpeg" />
+    <link rel="shortcut icon" href="./img/Maungeunsa.jpeg">
+    <script type="text/javascript" src="https://darae.dev/etc/maungeunsa.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body onload="init()">
@@ -40,8 +40,8 @@
         <div class="image02"></div>
      </div>
     <div id="home">
-        <a href="https://maple.gg/u/Chamdarae" class="hvr-grow-rotate"><img src="./img/Chamdarae.png" id="avatar" class="animated jackInTheBox"></a>
-	    <h1 id="name" class="animated zoomInUp">Chamdarae</h1>
+        <a href="https://maple.gg/u/%EB%A9%8D%EC%9D%80%EC%82%AC" class="hvr-grow-rotate"><img src="./img/Maungeunsa.jpeg" id="avatar" class="animated jackInTheBox"></a>
+	    <h1 id="name" class="animated zoomInUp">멍은사</h1>
 	    <p id="bio" class="animated fadeInUpBig"></p>
     </div>
     <div id="about" class="animated bounceInUp slower">
@@ -51,7 +51,7 @@
         </div>
         <div class="card hvr-grow">
             <h2 class="card_title">직업</h2>
-            <h1>보우마스터</h1>
+            <h1>듀얼블레이더</h1>
         </div>
         <div class="card hvr-grow">
             <h2 class="card_title">서버</h2>
